  * JS: STRING? also checks if object is an instance of
        class "String".
  * JS/PHP: Code size reduction by ~30%.
  * JS/PHP: MILLISECONDS-SINCE-1970 moved here from modules
  * JS/PHP: DEFPACKAGE, IN-PACKAGE and EXPORT added.
  * JS/PHP: OREF added for object access.
  * JS/PHP: Slightly shorter generated identifiers for alien
            characters.
  * JS/PHP: MAKE-ARRAY is a regular function.

Changes of tre-0.18 relative to tre-0.17:
  * Slightly improved optimizer.
  * NONE? renamed to NOTANY.
  * AADJOIN moved to outside project "phitamine".
  * Removed STRING-ARRAY.
  * Beautified compiler dumps.

Changes of tre-0.17 relative to tre-0.16:
  * COUNT now has :TEST argument.
  * COMPILE lists unused functions.
  * SUBSEQ: Doesn't claim error if sequence is NIL anymore.
  * ELT: Returns NIL if object is NIL.
  * Another thorough cleanup took place.

Changes of tre-0.16 relative to tre-0.15:
  * Transpiler cleaned up thoroughly.  Lots of stale code has
    been removed.
  * GENSYM now takes optional symbol name prefix.
  * Added ready-made project directories in example/ to make
    it easier to start projects.
  * REMOVE-PROP is now REMOVE-PROPS and works on an arbitrarily
    number of keys to remove.
  * PROPERTY-VALUES: New function to return the values of the
    keys PROPERTY-NAMES returns.
  * Identifier obfuscation is not supported anymore.
  * Macros MAPCAR-MACRO and MAPCAN-MACRO have been removed.
  * ASSOC-URL and MAKE-SYMBOLS have been removed.
  * *ENGLISH-NUMBERS* has been removed.
  * Removed transpiler pass INJECT-DEBUGGING.
  * Pseudo-profiler has been removed.

Changes of tre-0.15 relative to tre-0.14:
  * MAP has been removed.  It has been the same as MAPCAR.
  * MERGE!, HASH-MERGE and OPTIONAL-DOWNCASE have been removed.
  * PATHNAME-FILENAME has been renamed to PATH-FILENAME.
  * LML keyword attributes are translated to camel notation when
    XML or DOM nodes are being generated.  Affects