@@ -1,11 +1,14 @@
-(functional copy-array)
+(functional array copy-array array-list)
+
+(fn array (&rest elms)
+  (list-array elms))
+
 (fn copy-array (arr)
   (do ((ret (make-array))
        (i 0 (++ i)))
       ((== i (length arr)) ret)
     (= (aref ret i) (aref arr i))))
 
-(functional array-list)
 (fn array-list (x)
   (let result (make-queue)
     (adotimes ((length x) (queue-list result))
